compiler/testData/diagnostics/tests/annotations/annotationParameterMustBeConstant/enumConst_after.fir.kt
// !LANGUAGE: +ProhibitNonConstValuesAsVarargsInAnnotations

annotation class AnnE(val i: MyEnum)

@AnnE(e)
class Test

val e: MyEnum = MyEnum.A

enum class MyEnum {
    A
}

<!INAPPLICABLE_CANDIDATE!>@AnnE(Test())<!>
class Test2
